@@ -80,22 +80,6 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|BooleanClause
-operator|.
-name|Occur
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
 name|BooleanQuery
 operator|.
 name|BooleanWeight
@@ -346,7 +330,7 @@ extends|extends
 name|Scorer
 block|{
 DECL|field|score
-name|float
+name|double
 name|score
 decl_stmt|;
 DECL|field|doc
@@ -433,6 +417,9 @@ name|score
 parameter_list|()
 block|{
 return|return
+operator|(
+name|float
+operator|)
 name|score
 return|;
 block|}
@@ -452,7 +439,7 @@ literal|1
 decl_stmt|;
 comment|// tells if bucket is valid
 DECL|field|score
-name|float
+name|double
 name|score
 decl_stmt|;
 comment|// incremental score
